--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "zod": "^4.1.13"
   },
