--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@myprotocolstack/database": "workspace:*",
     "@myprotocolstack/ui": "workspace:*",
     "@myprotocolstack/utils": "workspace:*",
+    "@react-email/components": "^1.0.1",
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
@@ -22,6 +23,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "recharts": "^3.5.1",
+    "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "zod": "^4.1.13"
   },
