--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@myprotocolstack/database": "workspace:*",
     "@myprotocolstack/ui": "workspace:*",
     "@myprotocolstack/utils": "workspace:*",
+    "@next/mdx": "^16.0.8",
     "@react-email/components": "^1.0.1",
     "canvas-confetti": "^1.9.4",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-themes": "^0.4.6",
@@ -31,6 +35,7 @@
     "@myprotocolstack/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
