--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,9 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+  # You need this env var for the admin client to work
+  SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-from-sup
+  abase-dashboard
 
 # Email Notifications (Resend)
 RESEND_API_KEY=re_xxxxxxxxxxxx
