--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,10 +15,12 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@myprotocolstack/utils": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -26,8 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.556.0",
-    "sonner": "^2.0.7",
-    "@myprotocolstack/utils": "workspace:*"
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@myprotocolstack/typescript-config": "workspace:*",
@@ -38,7 +39,7 @@
     "typescript": "^5"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "next-themes": ">=0.4"
+    "next-themes": ">=0.4",
+    "react": ">=18"
   }
 }
