update env and url

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -1,15 +1,23 @@
+# App
+NEXT_PUBLIC_APP_URL=https://protocolstack.app
+
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-  # You need this env var for the admin client to work
-  SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-from-sup
-  abase-dashboard
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Email Notifications (Resend)
 RESEND_API_KEY=re_xxxxxxxxxxxx
-RESEND_FROM_EMAIL=noreply@yourdomain.com
+RESEND_FROM_EMAIL=noreply@protocolstack.app
 
 # Push Notifications (Web Push VAPID keys)
 # Generate with: npx web-push generate-vapid-keys
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=your-vapid-public-key
 VAPID_PRIVATE_KEY=your-vapid-private-key
+
+# Stripe
+STRIPE_SECRET_KEY=sk_xxx
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_PRICE_MONTHLY=price_xxx
+STRIPE_PRICE_ANNUAL=price_xxx
