--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
+    "stripe": "^20.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
